# mlops_project

./: .gitignore  Jenkinsfile  Makefile  README.md  pyproject.toml
btc_prediction/: __init__.py  dataset.py  features.py  plots.py  train_and_predict.py
btc_prediction/modeling/: predict.py  train.py
dags/: etl_and_predict_btc.py
data_pipeline/: README_RUN_PIPELINE.md  extract.py  load.py  pipeline.py  transform.py
docker/: Dockerfile  docker-compose.yml  requirements.txt
docs/: QUICKSTART.md  README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
docs/docs/architecture/: overview.md
docs/docs/guide/: installation.md
tests/: conftest.py
tests/btc_prediction/: test_config.py  test_dataset.py  test_features.py  test_plots.py  test_predict.py  test_train.py  test_train_and_predict.py
tests/data_pipeline/: test_extract.py  test_load.py  test_pipeline.py  test_transform.py
